# organizer

./: .gitignore  BUILD.md  CODE_SIGNING.md  GITHUB_SECRETS.md  MIGRATION.md  QUICKSTART.md  README.md  TASKS_COMPLETE.md  TAURI_COMPLETE.md  TAURI_SETUP.md  TESTING.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.tauri.ts  vite.config.ts
docs/: getting-started.md
public/: manifest.webmanifest  sw.js
server/: bookmarkImport.mjs  devServer.mjs  docCreation.mjs  docsTree.mjs  folderPicker.mjs  notePersistence.mjs  recentDocuments.mjs  requestMethods.mjs  restorePoints.mjs  server.mjs  starredNotes.mjs  todoItems.mjs
src/: App.tsx  apiFetch.ts  appTypes.ts  clientPlatform.ts  immersiveLayout.ts  main.tsx  markdownLinks.ts  navigationHistory.ts  netscapeBookmarks.ts  noteEditing.ts  noteFormatting.ts  noteSave.ts  noteSections.ts  noteSelection.ts  noteSorting.ts  noteTreeSearchState.ts  noteVersionHistory.ts  noteVisibility.ts  recentDocuments.ts  restorePoints.ts  searchFilters.ts  searchIndex.ts  searchScope.ts  styles.css  syncQueue.ts  tauriApi.ts  todoState.ts  types.ts  useBookmarksData.ts  useExpandedNoteFolders.ts  useNavigationHistoryState.ts  useNotesData.ts  useRecentDocumentsState.ts  useTodoData.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
tests/: app-state-hooks.test.mts  bookmark-dialogs.test.mts  bookmark-import.test.mts  bookmark-menu.test.mts  client-platform.test.mts  node-test-shims.d.ts  (+45 more)
(+35 files in other folders)
